students list dark mode fix

--- a/attendance-app-front/src/app/students-list/students-list.component.less
+++ b/attendance-app-front/src/app/students-list/students-list.component.less
@@ -15,4 +15,32 @@
     align-items: center;
   }
 
+  .element-row:hover {
+    cursor: pointer;
+  }
+
+  .mat-table-dark{
+    .mat-header-row{
+      background: #2b244d;
+    }
+    .mat-header-cell{
+      color: white;
+    }
+    .mat-row{
+      background: #49347b;
+    }
+    .mat-cell{
+      color: white;
+    }
+  }
+
+  .button-dark{
+    background: #49347b;
+    color: white;
+  }
+
+  .filter-dark{
+    color: white;
+  }
+
 }
